--- a/views/campaign.html
+++ b/views/campaign.html
@@ -11,6 +11,7 @@
     <script src="../services/manageService.js" type="module"></script>
     <script src="../services/commentService.js" type="module"></script>
     <script src="../services/likeService.js" type="module"></script>
+    <script src="../services/donateService.js" type="module"></script>
 </head>
 <body>
     <!-- NAVBAR -->
@@ -42,6 +43,30 @@
     </header>
     <div id="aux-div">
         <br>
+    </div>
+
+    <!-- DOAÇÃO -->
+    <div id="donation-container">
+        <button id="contribute-button">
+            <span>$</span>
+            <p>Contribuir</p>
+        </button>
+
+        <div id="contribute-area" class="modal">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <span id="closeContributionBtn">&times;</span>
+                    <h4>Fazer uma doação</h4>
+                    <h2 id="campaign-title-contributing">Título</h2>
+
+                    <form>
+                        <label>Valor da contribuição (R$)</label>
+                        <input type="number" min="1" id="contributing-value" required>
+                        <button id="send-value-btn">Contribuir</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- CAMPANHA -->
@@ -237,27 +262,6 @@
         </div>
     </footer>
     <script>
-        let $modal = document.querySelector('#edit-modal');
-        let $open_btn = document.querySelector('#manage-btn');
-        let $close_btn = document.querySelector('#closeBtn')
-
-        $open_btn.addEventListener('click', openModal);
-        $close_btn.addEventListener('click', closeModal);
-        window.addEventListener('click', clickOutside);
-
-        function openModal() {
-            $modal.style.display = 'block';
-        };
-
-        function closeModal() {
-            $modal.style.display = 'none';
-        };
-
-        function clickOutside(e) {
-            if (e.target == $modal) {
-                $modal.style.display = 'none';
-            };
-        };
 
         hideContent();
         /**
