--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="crowdfunding, doação, vaquinha">
     <meta name="keywords" content="Uma plataforma de crowdfunding gratuita feita para você!">
     <link rel="stylesheet" type="text/css" href="../styles/index.css">
+    <script src="../services/rankingService.js" type="module"></script>
 </head>
 <body>
     <header class="main-header">
