--- a/views/index.html
+++ b/views/index.html
@@ -42,7 +42,7 @@
     <!-- WALLPAPER -->
     <section id="wallpaper-section">
         <div id="wallpaper-div">
-            <img src="../styles/img/wallpaper2.jpg" alt="" height="250px">
+            <img src="../styles/img/wallpaper.png" alt="" height="250px">
             <a href="campaigns.html">Buscar campanha</a>
         </div>
     </section>  
@@ -56,7 +56,16 @@
 
     <!-- CAMPANHAS ATIVAS -->
     <section id="campaigns-section">
-        <h2>Campanhas ativas</h2>
+        <div id="campaigns-div">
+            <span id="campaigns-span">
+                <span>campanhas que</span>
+                <select id="filter-options">
+                    <option value="A">faltam menos para atingir a meta</option>
+                    <option value="B">estão prestes a expirar</option>
+                    <option value="C">receberam mais likes</option>
+                </select required>
+            </span>
+        </div>
     </section>
 
     <!-- RODAPÉ -->
