--- a/styles/index.css
+++ b/styles/index.css
@@ -19,6 +19,7 @@ body {
     background: linear-gradient(to right, #000, #171718) no-repeat 0 0 / cover;
     opacity: 80%;
     position: fixed;
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.15), 0 7px 20px 0 rgba(167, 120, 120, 0.15);
 }
 
 .main-header a {
@@ -82,7 +83,7 @@ body {
     background-image: url(../styles/img/hands-background2.png);
     width: 100%;
     background-size: cover;
-    background-position: center center;  
+    background-position: center center;
 }
 
 #wallpaper-section img {
@@ -115,6 +116,7 @@ body {
 }
 
 #launch-section {
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.15), 0 7px 20px 0 rgba(167, 120, 120, 0.15);
     background-image: url(./img/ideia.jpg);
     background-position: center center;
     background-repeat: no-repeat;
