--- a/styles/campaigns.css
+++ b/styles/campaigns.css
@@ -131,6 +131,7 @@ h4 {
     color: #4a4a4a;
 }
 
+
 #search-btn {
     border-radius: 4px;
     border: none;
@@ -385,6 +386,12 @@ footer {
     display: block;
     padding-bottom: 8px;
     color: #6E6E6E;
+}
+
+#campaign-title-contributing {
+    font-size: 28px;
+    margin: 20px auto;
+    color: #4a8fda;
 }
 
 #contribute-area input[type=number] {
