--- a/views/index.html
+++ b/views/index.html
@@ -42,7 +42,7 @@
     <!-- WALLPAPER -->
     <section id="wallpaper-section">
         <div id="wallpaper-div">
-            <img src="../styles/img/wallpaper.png" alt="" height="250px">
+            <img src="../styles/img/wallpaper.png" alt="">
             <a href="campaigns.html">Buscar campanha</a>
         </div>
     </section>  
