Iniciei a us9 e fiz a primeira filtragem

--- a/views/index.html
+++ b/views/index.html
@@ -66,6 +66,9 @@
                 </select required>
             </span>
         </div>
+        <div id="campaigns-ranking">
+            
+        </div>
     </section>
 
     <!-- RODAPÉ -->
