--- a/styles/index.css
+++ b/styles/index.css
@@ -8,6 +8,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: normal;
     font-style: normal;
+    
 }
 
 .main-header {
@@ -140,9 +141,8 @@ body {
 }
 
 #campaigns-section {
-    height: 450px;
+    height: 500px;
     text-align: center;
-    
 }
 
 #campaigns-div {
@@ -167,9 +167,41 @@ body {
     color: #171718;
 }
 
+#campaigns-ranking {
+    padding: 30px auto;
+    margin: 30px 5%;
+    display: flex;
+}
+
+.campaign-unit {
+    border: solid 1px #171718;
+    width: 18%;
+    height: 350px;
+    float: left;
+    box-sizing: border-box;
+    position: static;
+    margin: 10px 10px;
+}
+
+.campaign-unit-img-div {
+    background-image: url(./img/hands-background2.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.campaign-unit-img-div img {
+    height: 50px;
+}
+
+.campaign-unit-data-div {
+    color: #E8E8E8;
+    padding: 10px;
+}
+
 footer {
-    padding: 2px 0;
+    padding: 2px auto;
     background-color: #171718;
+    margin-top: auto;
 }
 
 #launch-div button:hover{
@@ -188,4 +220,4 @@ footer {
 
 #profile-btn img{
     height: 42px;
-}
+}   
