--- a/styles/index.css
+++ b/styles/index.css
@@ -174,19 +174,23 @@ body {
 }
 
 .campaign-unit {
-    border: solid 1px #171718;
+    border: solid 1.5px #BBB;
     width: 18%;
     height: 350px;
     float: left;
     box-sizing: border-box;
-    position: static;
     margin: 10px 10px;
+}
+
+.campaign-unit a {
+    text-decoration: none;
 }
 
 .campaign-unit-img-div {
     background-image: url(./img/hands-background2.png);
     background-size: cover;
     background-repeat: no-repeat;
+    padding: 10px;
 }
 
 .campaign-unit-img-div img {
@@ -194,8 +198,57 @@ body {
 }
 
 .campaign-unit-data-div {
-    color: #000;
-    padding: 10px;
+    color: #333;
+    
+}
+
+.campaign-unit-name {
+    font-size: 16px;
+    padding: 8px;
+    text-transform: capitalize;
+    font-weight: bolder; 
+    max-width: 25ch;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    text-align: center;
+}
+
+.campaign-unit-owner-data {
+    background-color: #E8E8E8;
+    padding: 8px;
+    font-size: 12px;
+}
+
+.campaign-goal-value {
+    padding: 8px;
+    font-size: 13px;
+     
+}
+
+.campaign-achieved-value {
+    font-weight: bold; 
+    padding-bottom: 8px;
+}
+
+.campaign-unit-deadline {
+    background-color: #E8E8E8;
+    padding: 7px;
+    font-size: 14px;
+}
+
+.campaign-deadline-value {
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.campaign-unit-likes {
+    padding: 8px;
+}
+
+.campaign-likes-value {
+    color: #4a8fda;
+    font-weight: bold;
 }
 
 footer {
