--- a/views/user.html
+++ b/views/user.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="crowdfunding, doação, vaquinha">
     <meta name="keywords" content="Uma plataforma de crowdfunding gratuita feita para você!">
     <link rel="stylesheet" href="../styles/profile.css">
-    <script src="../services/profileService.js" type="module"></script>
+    <script src="../services/userService.js" type="module"></script>
 </head>
 <body>
     <!-- NAVBAR -->
@@ -42,18 +42,13 @@
     </div>
     
     <!-- PERFIL DO USUARIO -->
-    <section id="my-data-section">
-        <h3>Meus dados</h3>
-
-        <div id="my-data-div">
-            <span>Primeiro nome</span>
-            <p id="profile-fname"></p>
-
-            <span>Último nome</span>
-            <p id="profile-lname"></p>
-
-            <span>Email</span>
-            <p id="profile-email"></p>
+    <section id="user-data-section">
+        <div id="user-img-div">
+            <img src="../styles/img/profile2.png" alt="profile logo">
+        </div>
+        <div id="user-data-div">
+            <p id="user-profile-name">Gabriel Costa</p>
+            <p id="user-profile-email">gabrielwebr@gmail.com</p>
         </div>
     </section>
 
