--- a/views/user.html
+++ b/views/user.html
@@ -59,14 +59,14 @@
                 <input type="text" id="search-user-campaign" placeholder="Encontrar campanha" required>
             </form>
             <div id="user-campaigns">
-                
+
             </div>
 
             <br>
-            <h2>Campanhas que o usuário fez realiza alguma doação</h2>
+            <h2>Campanhas que o usuário fez alguma doação</h2>
 
             <form id="campaign-form">
-                <input type="text" id="search-user-campaign" placeholder="Encontrar campanha" required>
+                <input type="text" id="search-user-donate-campaign" placeholder="Encontrar campanha" required>
             </form>
             <div id="user-donate-campaigns">
                 
