Tirei os erros de alteração de campanha

--- a/views/campaign.html
+++ b/views/campaign.html
@@ -90,7 +90,7 @@
     <!-- DADOS DA CAMPANHA -->
     <section id="container-list">
         <div id="owner-div">
-            <a>
+            <a id="owner-link">
                 <img src="../styles/img/profile.png" alt="profile logo">
                 <p id="owner-fname"></p>
                 <p id="owner-lname"></p>
