--- a/views/user.html
+++ b/views/user.html
@@ -58,9 +58,7 @@
             <form id="campaign-form">
                 <input type="text" id="search-user-campaign" placeholder="Encontrar campanha" required>
             </form>
-            <div id="user-campaigns">
-
-            </div>
+            <div id="user-campaigns"></div>
 
             <br>
             <h2>Campanhas que o usuário fez alguma doação</h2>
@@ -68,9 +66,7 @@
             <form id="campaign-form">
                 <input type="text" id="search-user-donate-campaign" placeholder="Encontrar campanha" required>
             </form>
-            <div id="user-donate-campaigns">
-                
-            </div>
+            <div id="user-donate-campaigns"></div>
         </div>
     </section>
 
