--- a/views/campaign.html
+++ b/views/campaign.html
@@ -70,6 +70,10 @@
     </div>
 
     <!-- CAMPANHA -->
+    <div id="campaign-share">
+        <label>Compartilhar campanha: </label>
+        <span id="campaign-link">http://ajude-psoft.netlify.com/views/users#</span>
+    </div>
     <section id="campaign-section-header">
         <div id="campaign-header">
             <div>
@@ -235,19 +239,9 @@
         <div id="comments-div">
             <h2>Comentários</h2>
 
-            <div class="comment">
-                <div class="comment-unit">
-                    <div class="infos-comment"></div>
-                    <a class="comment-profile">
-                        <p class="comment-username">Gabriel Costa</p>
-                    </a>
-                    <p class="comment-time">19h27</p>
-                    <p class="comment-area">Comentario teste asdhashdjka hsgdajk hsghask gas hgaj shvhj dvaskjh vhsa </p>
-                </div>
+            <div id="comments-container">
 
-                <button class="reply-btn">Responder</button>
             </div>
-    
         </div>
     </section>
 
@@ -262,7 +256,6 @@
         </div>
     </footer>
     <script>
-
         hideContent();
         /**
          * Exclui os botões de criar conta e login e cria o de perfil quando o usuário está logado
